# actions-test

./: Makefile  package-lock.json  package.json  pull_req.py  pyproject.toml
.github/: labels.yml  release-drafter.yml
.github/workflows/: gcloud_test.yml  go_test.yml  label_sync.yml  labeler.yml  main.yml  mysql.yaml  node_cache.yml  pull_request.yml  python_test.yml  release.yml  release_draft.yml  wip.yml
go/: go.mod  go.sum  main.go
installer/: all.sh  deres.vimrc.sh  gvm.sh  neovim.sh  nerdfonts.sh  nodenv.sh  pyenv.sh
installer/mac/: homebrew.sh  homebrew_list.sh  ricty.sh
